# ollvm-deobfuscator

./: CMakeLists.txt  LICENSE  README.md
include/: DBogusFlow.h  DFlattening.h
lib/: DBogusFlow.cpp  DFlattening.cpp
tests/: test1.c  test2.c  test3.c  test4.c  test5.c
